--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						<p>iOS Development since 2009</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">Email</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/shinrenpan" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="http://tw.linkedin.com/in/shinrenpan/" class="icon fa-linkedin"><span class="label">Email</span></a></li>
+								<li><a href="mailto:shinren.pan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
