--- a/video/index.html
+++ b/video/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>視頻地址解析</title>
+  <title>影片解析</title>
 
   <script type="text/javascript" src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="media/js/base64.js"></script>
@@ -18,7 +18,6 @@
   </span>
 
   <div class="panel-body" id="resultbox" style="display: none;">
-    <span class="pull-right" id="apiurls"></span>獲取結果 (<span style="color:#cc0000"></span>)
   </div>
 
   <div id="result">等待提交</div>
