--- a/video/index.html
+++ b/video/index.html
@@ -20,7 +20,7 @@
   <div class="panel-body" id="resultbox" style="display: none;">
   </div>
 
-  <div id="result">等待提交</div>
+  <div id="result"></div>
     
 </body>
 </html>
