--- a/video/index.html
+++ b/video/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <p>By <a hrer="http://www.flvxz.com">flvxz.com</a></p>
   <input type="text" name="url" id="videoPageURI" class="form-control" style="outline: none;">
 
   <span class="input-group-btn">
