--- a/video/index.html
+++ b/video/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>影片解析</title>
 
-  <script type="text/javascript" src="media/js/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="media/js/base64.js"></script>
+  <script type="text/javascript" src="media/js/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="media/js/jquery.base64.js"></script>
   <script type="text/javascript" src="media/js/getFlv.js"></script>
   <script type="text/javascript" src="media/js/ZeroClipboard.min.js"></script>
 </head>
