--- a/video1/index.html
+++ b/video1/index.html
@@ -1,61 +1,25 @@
+<!DOCTYPE HTML>
 <html>
-    <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <script type="text/javascript" src="js/base64.js"></script>
-      <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-     
-      <script type="text/javascript">
-         function mygetFlv() 
-         {
-         var uri =$('#videoPageURI').val();
+<head>
+  <script type="text/javascript" src="js/base64.js"></script>
+  <script type="text/javascript" src="js/getFlv.js"></script>
+  <script type="text/javascript" src="js/ZeroClipboard.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>測試中...</title>
+</head>
 
-          $('#resultbox').show();
-          $("#result").html("");
-	      $.getScript("http://www.flvxz.com/getFlv.php?url="+encodeBase64(uri.replace('http://','http:##').replace('https://','https:##')),changeonclick);
-         }
-         function changeonclick()
-         {
-             for(var i=0;i<$("a").length;i++)
-             {
-              var tmp="a:eq("+i.toString()+")";
-              //$(tmp).attr("href","javascript:change()");
-              console.log(tmp);
-             }
-         }
-         function change()
-         {
-          var flashstr="<embed src=\"JcClassicPlayerC.swf\" flashvars="
-                      +"\"source_file="
-                      +$("a:eq(1)").attr("href").toString()+"\""
-                      +"showMovieInfo=1 "
-                      +"pluginspage=\"http://www.macromedia.com/go/getflashplayer\" "
-                      +"type=\"application/x-shockwave-flash\" "
-                      +"wmode=\"transparent\" "
-                      +"allowFullScreen=\"true\" "
-                      +"quality=\"high\" "
-                      +"width=\"335\" height=\"252\"></embed>";
-          $("#showuri").html(flashstr);        
-         }
-       </script>
-    </head>
-    <body>
+<body>
+  <div class="input-group">
+    <input type="text" name="url" id="videoPageURI" class="form-control" placeholder="在這裡粘貼視頻頁面的地址...(包含http://)" style="outline: none;">
+    <span class="input-group-btn">
+      <input type="button" id="fetchButton" class="btn btn-default" value="獲取地址" onclick="parseFlv();">
+    </span>
+  </div>
 
-  		<input type="button" id="fetchButton" class="submit" value="Input the URL of the video page" onclick="mygetFlv();" />
-		<input type="text" name="url" id="videoPageURI" maxlength="500" size="40" class="url" value="" />
-        <div class="box" id="resultbox">
-            <div class="lin">
-            </div>
-        	<div id="result">
-        	</div>
-        </div>
-        <a href="aaaa" >ssss</a>
-        <a href="aaaa" >cccccccc</a>
-
-        <div id="showuri">
-        </div>
-        <script type="text/javascript">  
-             $("a").click(function(){change();});
- 
-        </script>
-    </body>
+  <div class="panel-body" id="resultbox" style="display: none;">
+      <div id="result">...<br>
+      </div>
+  </div>
+</body>
 </html>
