--- a/video1/index.html
+++ b/video1/index.html
@@ -7,7 +7,8 @@
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="js/jquery.base64.js"></script>
   <script type="text/javascript" src="js/jquery.placeholder.js"></script>
-  <script type="text/javascript" src="ZeroClipboard.js"></script>
+  <script type="text/javascript" src="js/ZeroClipboard.js"></script>
+  <script type="text/javascript" src="js/getFlv.js"></script>
 
 </head>
 
