--- a/video1/index.html
+++ b/video1/index.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 影音瀏覽器 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:468px;height:60px"
+     data-ad-client="ca-pub-9003896396180654"
+     data-ad-slot="4749534593"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
   <a hrer="http://www.flvxz.com">flvxz.com</a>
   <input type="text" name="url" id="videoPageURI" class="form-control" style="outline: none;">
 
@@ -24,6 +35,6 @@
   </div>
 
   <div id="result"></div>
-    
+  
 </body>
 </html>
