--- a/video1/index.html
+++ b/video1/index.html
@@ -24,13 +24,15 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
-  <a hrer="http://www.flvxz.com">flvxz.com</a>
-  <input type="text" name="url" id="videoPageURI" class="form-control" style="outline: none;">
+  <div>
+    <a hrer="http://www.flvxz.com">flvxz.com</a>
+    <input type="text" name="url" id="videoPageURI" class="form-control" style="outline: none;">
 
-  <span class="input-group-btn">
-    <input type="button" id="fetchButton" class="btn btn-default" value="GO!" onclick="parseFlv();">
-  </span>
-
+    <span class="input-group-btn">
+      <input type="button" id="fetchButton" class="btn btn-default" value="GO!" onclick="parseFlv();">
+    </span>
+  </div>
+  
   <div class="panel-body" id="resultbox" style="display: none;">
   </div>
 
