--- a/video1/index.html
+++ b/video1/index.html
@@ -1,5 +1,4 @@
-<!--
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html>
 <head>
   <meta charset="utf-8">
@@ -16,12 +15,12 @@
 <body>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 影音瀏覽器 -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:468px;height:60px"
      data-ad-client="ca-pub-9003896396180654"
      data-ad-slot="4749534593"></ins>
 <script>
+
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
@@ -40,5 +39,4 @@
   <div id="result"></div>
   
 </body>
-</html>
--->
+</html> -->
