--- a/kankan/info.html
+++ b/kankan/info.html
@@ -14,6 +14,7 @@ This is free to use. I hold no copyright.
   <head>
     <meta charset="UTF-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport" />
+    <title>最新消息</title>
     <style>
       
       body {
