--- a/kankan/info.html
+++ b/kankan/info.html
@@ -66,15 +66,15 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.soku.com">搜庫</a></li>
   </ol>
   
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- 影音瀏覽器 -->
-    <ins class="adsbygoogle"
-       style="display:inline-block;width:468px;height:60px"
-       data-ad-client="ca-pub-9003896396180654"
-       data-ad-slot="4749534593">
-     </ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- KanKan -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9003896396180654"
+     data-ad-slot="9594876597"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
