--- a/kankan/info.html
+++ b/kankan/info.html
@@ -51,7 +51,7 @@ This is free to use. I hold no copyright.
 
   <p>最新消息</p>
   <ol class="custom-counter">
-    <li><a href="">AcFun</a> 請偽裝成 iPad 或是 Safari (2015-03-10)</li>
+    <li><a href="http://www.acfun.tv">AcFun</a> 請偽裝成 iPad 或是 Safari (2015-03-10)</li>
     <li>不支援愛奇藝 (2015-03-10)</li>
     <li>不支援樂視網 (2015-03-10)</a></li>
     <li>不支援 YouTube (2015-03-10)</li>
