--- a/kankan/info.html
+++ b/kankan/info.html
@@ -49,6 +49,19 @@ This is free to use. I hold no copyright.
 
 <body>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- KanKan -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9003896396180654"
+     data-ad-slot="9594876597"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+  
   <p>最新消息</p>
   <ol class="custom-counter">
     <li><a href="http://www.acfun.tv">AcFun</a> 請偽裝成 iPad 或是 Safari (2015-03-10)</li>
@@ -60,21 +73,11 @@ This is free to use. I hold no copyright.
 
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
 
-  <p>常用影音引擎</p>
+  <p>常用網站</p>
   <ol class="custom-counter">
     <li><a href="http://www.yunfan.com">雲帆搜索</a></li>
-    <li><a href="http://www.soku.com">搜庫</a></li>
+    <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
   </ol>
   
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- KanKan -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9003896396180654"
-     data-ad-slot="9594876597"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </body>
 </html>
