--- a/kankan/info.html
+++ b/kankan/info.html
@@ -66,6 +66,7 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.youku.com">優酷</a></li>
   </ol>
   
+  <div>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins class="adsbygoogle"
      style="display:block"
@@ -75,6 +76,6 @@ This is free to use. I hold no copyright.
   <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-
+</div>
 </body>
 </html>
