--- a/kankan/info.html
+++ b/kankan/info.html
@@ -74,6 +74,8 @@ This is free to use. I hold no copyright.
   <ol class="custom-counter">
     <li><a href="http://www.yunfan.com">雲帆搜索</a></li>
     <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
+    <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
+    <li><a href="http://www.acfun.tv">AcFun</a></li>
     <li><a href="http://v.qq.com">騰訊視頻</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
   </ol>
