--- a/index.html
+++ b/index.html
@@ -1,53 +1,1 @@
-<!--<!DOCTYPE HTML>-->
-<!--
-<!--	Aerial by HTML5 UP-->
-<!--	html5up.net | @n33co-->
-<!--	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
-<!---->-->
-<!--<html>-->
-<!--	<head>-->
-<!--		<title>ShinrenPan</title>-->
-<!--		<meta http-equiv="content-type" content="text/html; charset=utf-8" />-->
-<!--		<meta name="description" content="" />-->
-<!--		<meta name="keywords" content="" />-->
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-<!--		<script src="js/skel.min.js"></script>-->
-<!--		<script src="js/init.js"></script>-->
-<!--		<noscript>-->
-<!--			<link rel="stylesheet" href="css/skel.css" />-->
-<!--			<link rel="stylesheet" href="css/style.css" />-->
-<!--			<link rel="stylesheet" href="css/style-wide.css" />-->
-<!--			<link rel="stylesheet" href="css/style-noscript.css" />-->
-<!--		</noscript>-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-<!--	</head>-->
-<!--	<body class="loading">-->
-<!--		<div id="wrapper">-->
-<!--			<div id="bg"></div>-->
-<!--			<div id="overlay"></div>-->
-<!--			<div id="main">-->
-
-				<!-- Header -->
-<!--					<header id="header">-->
-<!--						<img id="circular" src="http://www.gravatar.com/avatar/c68e9d83a5e7192b9c8e4e76caab9a16?s=150">-->
-<!--						<h1>Shinren Pan</h1>-->
-<!--						<p>iOS Development since 2009</p>-->
-<!--						<nav>-->
-<!--							<ul>-->
-<!--								<li><a href="https://github.com/shinrenpan" class="icon fa-github"><span class="label">Github</span></a></li>-->
-<!--								<li><a href="http://tw.linkedin.com/in/shinrenpan/" class="icon fa-linkedin"><span class="label">Email</span></a></li>-->
-<!--								<li><a href="mailto:shinren.pan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>-->
-<!--							</ul>-->
-<!--						</nav>-->
-<!--					</header>-->
-
-				<!-- Footer -->
-<!--					<footer id="footer">-->
-<!--						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>-->
-<!--					</footer>-->
-				
-<!--			</div>-->
-<!--		</div>-->
-<!--	</body>-->
-<!--</html>-->
+Hello world !
