--- a/kankan/info.html
+++ b/kankan/info.html
@@ -48,7 +48,29 @@ This is free to use. I hold no copyright.
   </head>
 
 <body>
-<!--
+  <p>最新消息</p>
+  <ol class="custom-counter">
+    <li>修復影片解析功能</li>
+    <li>移除手動解析功能</li>
+    <li>不再支援 flash 播放</li>
+    <li>不再支援影片列表, 直接播放單一片源</li>
+    <li>解析片源後將自動複製連結於剪貼簿上</li>
+    <li>新增橫幅廣告及插頁廣告</li>
+  </ol>
+
+  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+
+  <p>支援網站</p>
+  <ol class="custom-counter">
+    <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
+    <li><a href="http://www.letv.com">樂視網</a></li>
+    <li><a href="http://www.pptv.com">PPTV</a></li>
+    <li><a href="http://v.qq.com">騰訊視頻</a></li>
+    <li><a href="http://www.tudou.com">土豆網</a></li>
+    <li><a href="http://www.youku.com">優酷</a></li>
+  </ol>
+  
+  <!--
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins class="adsbygoogle"
      style="display:block"
@@ -58,27 +80,7 @@ This is free to use. I hold no copyright.
   <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
--->
-
-  <p>最新消息</p>
-  <ol class="custom-counter">
-    <li>不支援愛奇藝 (2015-03-10)</li>
-    <li>不支援樂視網 (2015-03-10)</a></li>
-    <li>不支援 YouTube (2015-03-10)</li>
-    <li>不支援 Dailymotion (2015-03-10)</li>
-  </ol>
-
-  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
-
-  <p>常用網站</p>
-  <ol class="custom-counter">
-    <li><a href="http://www.yunfan.com">雲帆搜索</a></li>
-    <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
-    <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
-    <li><a href="http://www.acfun.tv">AcFun</a></li>
-    <li><a href="http://v.qq.com">騰訊視頻</a></li>
-    <li><a href="http://www.youku.com">優酷</a></li>
-  </ol>
-  
+ -->
+ 
 </body>
 </html>
