--- a/kankan/info.html
+++ b/kankan/info.html
@@ -64,7 +64,7 @@ This is free to use. I hold no copyright.
   <ol class="custom-counter">
     <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
     <li><a href="http://www.letv.com">樂視網</a></li>
-    <li><a href="http://www.pptv.com">PPTV</a></li>
+    <li><a href="http://www.pptv.com">PPTV (需偽裝成 iPad or Safari)</a></li>
     <li><a href="http://v.qq.com">騰訊視頻</a></li>
     <li><a href="http://www.tudou.com">土豆網</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
