--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,12 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
-    <li>修復影片解析功能</li>
-    <li>移除手動解析功能</li>
-    <li>不再支援 flash 播放</li>
-    <li>不再支援影片列表, 直接播放單一片源</li>
-    <li>解析片源後將自動複製連結於剪貼簿上</li>
-    <li>新增橫幅廣告及插頁廣告</li>
+    <li>無</li>
   </ol>
 
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
@@ -64,10 +59,19 @@ This is free to use. I hold no copyright.
   <ol class="custom-counter">
     <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
     <li><a href="http://www.letv.com">樂視網</a></li>
-    <!--<li><a href="http://www.pptv.com">PPTV</a> (偽裝成 iPad or Safari)</li>-->
     <li><a href="http://v.qq.com">騰訊視頻</a></li>
     <li><a href="http://www.tudou.com">土豆網</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
+    <li><a href="http://tv.sohu.com">搜狐</a></li>
+  </ol>
+  
+  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+  
+  <p>影片搜尋</p>
+  <ol class="custom-counter">
+    <li><a href="http://www.yunfan.com">雲帆</a></li>
+    <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
+    <li><a href="http://www.360kan.com">360影視</a></li>
   </ol>
   
   <!--
