--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,7 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
-    <li>無</li>
+    <li>樂視網反應較慢, 請減少使用.</li>
   </ol>
 
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
@@ -74,7 +74,6 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.360kan.com">360影視</a></li>
   </ol>
   
-  <!--
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins class="adsbygoogle"
      style="display:block"
@@ -84,7 +83,6 @@ This is free to use. I hold no copyright.
   <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
- -->
  
 </body>
 </html>
