--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,6 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
+    <li>Default 搜尋引擎無法使用, 請至設定頁面手動設置.將於下個版本修復此bug.</li>
     <li>樂視網反應較慢, 請減少使用.</li>
   </ol>
 
