--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,8 +50,8 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
+   <li>新增嗶哩嗶哩</li>
     <li>Default 搜尋引擎無法使用, 請至設定頁面手動設置.將於下個版本修復此bug.</li>
-    <li>樂視網反應較慢, 請減少使用.</li>
   </ol>
 
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
@@ -64,6 +64,7 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.tudou.com">土豆網</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
     <li><a href="http://tv.sohu.com">搜狐</a></li>
+    <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
   </ol>
   
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
