--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
   </head>
 <body>
   <p>Apps</p>
-  <i class="fa fa-apple fa-3x"></i><a href="https://itun.es/i6LV9Gb"> 台灣廣播電台</a>
-  <i class="fa fa-apple fa-3x"></i><a href="https://itun.es/i6LV9Gm"> 影音瀏覽器</a>
-  <i class="fa fa-apple fa-3x"></i><a href="https://itun.es/i6L26jb"> Surf Chat</a>
+  <i class="fa fa-apple fa-2x"></i><a href="https://itun.es/i6LV9Gb"> 台灣廣播電台</a></br>
+  <i class="fa fa-apple fa-2x"></i><a href="https://itun.es/i6LV9Gm"> 影音瀏覽器</a></br>
+  <i class="fa fa-apple fa-2x"></i><a href="https://itun.es/i6L26jb"> Surf Chat</a></br>
+  
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
   
-  <p></p>
+  <p>相關</p>
+  <i class="fa fa-linkedin-square fa-2x"></i><a href="">Linkedin</a></br>
+  <i class="fa fa-github-alt fa-2x"></i><a href="https://github.com/shinrenpan/shinrenpan.github.io/issues">iOS 開發</a></br>
+  <i class="fa-github fa-2x"></i><a href="https://github.com/shinrenpan">GitHub</a></br>
+  
+  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+  
 </body>
 </html>
