--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,6 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
+   <li>3.1.2 更新上線</li>
    <li>新增嗶哩嗶哩</li>
   </ol>
 
