--- a/kankan/info.html
+++ b/kankan/info.html
@@ -64,7 +64,7 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.tudou.com">土豆網</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
     <li><a href="http://tv.sohu.com">搜狐</a></li>
-    <li><d>嗶哩嗶哩</d></li>
+    <li><del>嗶哩嗶哩</del></li>
     <!--<li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>-->
   </ol>
   
