--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,7 +50,8 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
-   <li>嗶哩嗶哩異常</li>
+   <li>嗶哩嗶哩修復</li>
+   <li><del>嗶哩嗶哩異常</del></li>
    <li>3.1.3 更新上線</li>
   </ol>
 
@@ -64,8 +65,7 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.tudou.com">土豆網</a></li>
     <li><a href="http://www.youku.com">優酷</a></li>
     <li><a href="http://tv.sohu.com">搜狐</a></li>
-    <li><del>嗶哩嗶哩</del></li>
-    <!--<li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>-->
+    <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
   </ol>
   
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
