--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,8 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
-   <li>嗶哩嗶哩修復</li>
-   <li><del>嗶哩嗶哩異常</del></li>
+   <li>愛奇藝異常</li>
    <li>3.1.3 更新上線</li>
   </ol>
 
@@ -59,7 +58,8 @@ This is free to use. I hold no copyright.
 
   <p>支援網站</p>
   <ol class="custom-counter">
-    <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
+   <li><del>愛奇藝</del></li>
+    <!--<li><a href="http://www.iqiyi.com">愛奇藝</a></li>-->
     <li><a href="http://www.letv.com">樂視網</a></li>
     <li><a href="http://v.qq.com">騰訊視頻</a></li>
     <li><a href="http://www.tudou.com">土豆網</a></li>
