--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,16 +50,16 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
+   <li>愛奇藝修復</li>
    <li>3.1.4 更新上線</li>
-   <li>愛奇藝異常</li>
   </ol>
 
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
 
   <p>支援網站</p>
   <ol class="custom-counter">
-   <li><del>愛奇藝</del></li>
-    <!--<li><a href="http://www.iqiyi.com">愛奇藝</a></li>-->
+   <!--<li><del>愛奇藝</del></li>-->
+    <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
     <li><a href="http://www.letv.com">樂視網</a></li>
     <li><a href="http://v.qq.com">騰訊視頻</a></li>
     <li><a href="http://www.tudou.com">土豆網</a></li>
