--- a/kankan/info.html
+++ b/kankan/info.html
@@ -50,7 +50,7 @@ This is free to use. I hold no copyright.
 <body>
   <p>最新消息</p>
   <ol class="custom-counter">
-   <li>愛奇藝修復</li>
+   <li>支援 AcFun</li>
    <li>3.1.4 更新上線</li>
   </ol>
 
@@ -66,6 +66,7 @@ This is free to use. I hold no copyright.
     <li><a href="http://www.youku.com">優酷</a></li>
     <li><a href="http://tv.sohu.com">搜狐</a></li>
     <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
+    <li><a href="http://www.acfun.tv">AcFun</a></li>
   </ol>
   
   <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
