--- a/kankan/index.html
+++ b/kankan/index.html
@@ -44,34 +44,42 @@ This is free to use. I hold no copyright.
   </head>
 
 <body>
-  <p>最新消息</p>
-  <ol class="custom-counter">
-   <li>愛奇藝暫時使用低清影片</li>
-  </ol>
-
-  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
-
-  <p>支援網站</p>
-  <ol class="custom-counter">
-    <!--<li><del>愛奇藝</del></li>-->
-    <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
-    <li><a href="http://www.letv.com">樂視網</a></li>
-    <li><a href="http://v.qq.com">騰訊視頻</a></li>
-    <li><a href="http://www.tudou.com">土豆網</a></li>
-    <li><a href="http://www.youku.com">優酷</a></li>
-    <li><a href="http://tv.sohu.com">搜狐</a></li>
-    <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
-    <li><a href="http://www.acfun.tv">AcFun</a></li>
-  </ol>
-  
-  <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
-  
-  <p>影片搜尋</p>
-  <ol class="custom-counter">
-    <li><a href="http://www.yunfan.com">雲帆</a></li>
-    <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
-    <li><a href="http://www.360kan.com">360影視</a></li>
-  </ol>
-  
+ 
+ 
+ <p>置頂</p>
+ <ol class="custom-counter">
+  <li>此 App 為免費軟體. 你可以點擊廣告贊助我.</li>
+  <li>支援但不限於以下網站, 你可以自己嘗試哪些網站也支援.</li>
+  <li>如果該網站支援 HTML5 播放器, 請盡量使用 HTML5 播放器.</li>
+ </ol>
+ <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+ 
+ 
+ <p>最新消息</p>
+ <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+ 
+ 
+ <p>支援網站</p>
+ <ol class="custom-counter">
+  <li><a href="http://www.iqiyi.com">愛奇藝</a></li>
+  <li><a href="http://www.letv.com">樂視網</a></li>
+  <li><a href="http://v.qq.com">騰訊視頻</a></li>
+  <li><a href="http://www.tudou.com">土豆網</a></li>
+  <li><a href="http://www.youku.com">優酷</a></li>
+  <li><a href="http://tv.sohu.com">搜狐</a></li>
+  <li><a href="http://www.bilibili.com">嗶哩嗶哩</a></li>
+  <li><a href="http://www.acfun.tv">AcFun</a></li>
+ </ol>
+ <div style="BORDER-TOP: #00686b 1px dashed; OVERFLOW: hidden; HEIGHT: 1px"></div>
+ 
+ 
+ <p>影片搜尋</p>
+ <ol class="custom-counter">
+  <li><a href="http://www.yunfan.com">雲帆</a></li>
+  <li><a href="http://www.soku.com/channel/index______1.html">搜庫</a></li>
+  <li><a href="http://www.360kan.com">360影視</a></li>
+ </ol>
+ 
+ 
 </body>
 </html>
