--- a/kankan/index.html
+++ b/kankan/index.html
@@ -45,7 +45,7 @@ This is free to use. I hold no copyright.
 
 <body>
  
- 
+ <a href="http://shinrenpan.github.io/kankan/index_en.html">English</a>
  <p>置頂</p>
  <ol class="custom-counter">
   <li>此 App 為免費軟體. 你可以點擊廣告贊助我.</li>
